[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-dbt-core"
dynamic = ["version"]
description = "OpenTelemetry instrumentaiton for dbt-core"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
]

[project.optional-dependencies]
instruments = [
  "dbt-core ~= 1.7",
]
test = [
  "opentelemetry-instrumentation-dbt-core[instruments]",
  "opentelemetry-semantic-conventions == 0.44b0.dev",
  "opentelemetry-test-utils == 0.44b0.dev",
]

[project.entry-points.opentelemetry_instrumentor]
dbt-core = "opentelemetry.instrumentation.dbt:DBTCoreInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/instrumentation/opentelemetry-instrumentation-dbt-core"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/dbt/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
